force-app/main/default/objects/Policy_Option__c/Policy_Option__c.object-meta.xml
<CustomObject>
    <description>This object will store the information about the policy options available for all the agents/program participants of a sponsored/open market program. Each policy option will be tied to the Quote record. This object will also contain other information such as ‘Deductible’, confirmation of endorsements if added, and Estimated Annual Premium and Fees.</description>
    <label>Policy Option</label>
    <nameField>
        <label>Policy Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>