force-app/main/default/objects/Policy_Option__c/fields/Estimated_Annual_Fees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Fees__c</fullName>
    <label>Estimated Annual Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>