force-app/main/default/objects/Policy_Option__c/fields/Limit_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Limit_of_Liability__c</fullName>
    <label>Limit of Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>