force-app/main/default/objects/Policy_Option__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Policy Options</relationshipLabel>
    <relationshipName>Master_Policy_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>